<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>p2os_bringup</name>
  <version>0.0.0</version>
  <description>Bring up a ROS2 p2os robot</description>
  <maintainer email="karim@compuguru.com">karim</maintainer>
  <license>GPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>p2os_driver</exec_depend>
  <exec_depend>p2os_msgs</exec_depend>
  <exec_depend>p2os_urdf</exec_depend>
  <exec_depend>p2os_teleop</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
